--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,9 +14,10 @@ const { title = 'Florian & Ugo' } = Astro.props;
                 <li><a class="px-3 py-1 rounded text-sm hover:bg-sky-500/10 focus:bg-sky-500/10" href="/slider">Carte</a></li>
                 <li><a class="px-3 py-1 rounded text-sm hover:bg-sky-500/10 focus:bg-sky-500/10" href="/carte-gares-lignes">Gares & Lignes</a></li>
                 <li><a class="px-3 py-1 rounded text-sm hover:bg-sky-500/10 focus:bg-sky-500/10" href="/barre">Barre</a></li>
-                <li><a class="px-3 py-1 rounded text-sm hover:bg-sky-500/10 focus:bg-sky-500/10" href="/carte-gares">Carte Gare</a></li>
+                <li><a class="px-3 py-1 rounded text-sm hover:bg-sky-500/10 focus:bg-sky-500/10" href="/densite">Densité</a></li>
                 <li><a class="px-3 py-1 rounded text-sm hover:bg-sky-500/10 focus:bg-sky-500/10" href="/carte-gares-tourisme">Tourisme</a></li>
                 <li><a class="px-3 py-1 rounded text-sm hover:bg-sky-500/10 focus:bg-sky-500/10" href="/accessibilite">Accessibilité</a></li>
+                <li><a class="px-3 py-1 rounded text-sm hover:bg-sky-500/10 focus:bg-sky-500/10" href="/conclusion">Conclusion</a></li>
             </ul>
         </nav>
     </div>
