--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -12,9 +13,12 @@ import Header from "../components/Header.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Astro Basics</title>
   </head>
-  <body>
+  <body class="flex flex-col min-h-screen">
     <Header title="Florian & Ugo" />
-    <slot />
+    <main class="flex-1">
+      <slot />
+    </main>
+    <Footer />
   </body>
 </html>
 
@@ -23,6 +27,5 @@ import Header from "../components/Header.astro";
   body {
     margin: 0;
     width: 100%;
-    height: 100%;
   }
 </style>
